...
            android:text="@string/community_garden"
            android:textColor=" #64CB3F"
            android:textSize="36sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/firstNameTxt_signup"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/textview_shape"
...
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <EditText
            android:id="@+id/lastNameTxt_signup"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:background="@drawable/textview_shape"
...
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <EditText
            android:id="@+id/emailTxt_signup"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:background="@drawable/textview_shape"
...
            android:inputType="none|textEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <EditText
            android:id="@+id/passwordTxt_signup"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:background="@drawable/textview_shape"
...
            android:inputType="none|textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <EditText
            android:id="@+id/passwordConfirmTxt_signup"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="430dp"
            android:background="@drawable/textview_shape"
...
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="#FFFFFF"/>

    <Button
            android:id="@+id/signUpBtn_signup"
            android:layout_width="320dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="80dp"
            android:background="@drawable/positive_button_shape"
...
