<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/relativeLayout"
                tools:context=".task_view.filter_sorting.FilterPopUp"
                android:layout_width="320dp"
                android:layout_height="450dp"
                android:layout_gravity="center"
                android:background="@drawable/filter_shape"
                android:orientation="vertical"
                android:theme="@android:style/Theme.Black.NoTitleBar">

    <TextView
            android:id="@+id/filterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/filters"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/redhatdisplay"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"/>

    <Button
            android:id="@+id/clearButton"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/negative_button_shape"
            android:text="@string/clear"
            android:fontFamily="@font/redhatdisplay"
            android:onClick="clearMethod"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap"/>

    <View
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:layout_marginTop="55dp"
            android:background="#757373"/>

    <TextView
            android:id="@+id/dueBetweenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="65dp"
            android:text="@string/due_between"
            android:textColor="#040404"
            android:fontFamily="@font/redhatdisplay"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap"/>

    <Button
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="170dp"
            android:background="@drawable/date_select_button_shape"
            android:onClick="selectCalendar"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/start_date"
            android:textColor="#03A9F4"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/endDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/date_select_button_shape"
            android:onClick="selectCalendar"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/end_date"
            android:textColor="#03A9F4"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/priorityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="160dp"
            android:text="@string/priority"
            android:textColor="#040404"
            android:textStyle="bold"
            android:fontFamily="@font/redhatdisplay"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap"/>

    <Button
            android:id="@+id/filterPriorityButton1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/priority_shape1"
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/_1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="prioritySelect"/>

    <Button
            android:id="@+id/filterPriorityButton2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="82.5dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/priority_shape2"
            android:fontFamily="@font/redhatdisplay"
            android:onClick="prioritySelect"
            android:text="@string/_2"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/filterPriorityButton3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/priority_shape3"
            android:fontFamily="@font/redhatdisplay"
            android:onClick="prioritySelect"
            android:text="@string/_3"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/filterPriorityButton4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="82.5dp"
            android:background="@drawable/priority_shape4"
            android:fontFamily="@font/redhatdisplay"
            android:onClick="prioritySelect"
            android:text="@string/_4"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/filterPriorityButton5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/priority_shape5"
            android:fontFamily="@font/redhatdisplay"
            android:onClick="prioritySelect"
            android:text="@string/_5"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/redhatdisplay"
            android:background="@drawable/positive_button_shape"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/apply"
            android:onClick="applyMethod"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="250dp"
            android:text="@string/sort_by"
            android:textColor="#040404"
            android:fontFamily="@font/redhatdisplay"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap"/>

    <Button
            android:id="@+id/sortDueDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:background="@drawable/negative_button_shape"
            android:onClick="sortCategorySelect"
            android:text="@string/due_date"
            android:textColor="#FFFFFF"
            android:paddingStart="8dp"
            android:fontFamily="@font/redhatdisplay"
            android:paddingTop="3dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortPriorityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="139dp"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/negative_button_shape"
            android:onClick="sortCategorySelect"
            android:paddingStart="6dp"
            android:paddingTop="3dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/priority"
            android:textColor="#FFFFFF"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortAZBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/negative_button_shape"
            android:onClick="sortCategorySelect"
            android:text="@string/a_z"
            android:textColor="#FFFFFF"
            android:paddingStart="6dp"
            android:paddingTop="3dp"
            android:fontFamily="@font/redhatdisplay"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortAscendingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="335dp"
            android:layout_marginStart="25dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/redhatdisplay"
            android:background="@drawable/negative_button_shape"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:onClick="sortOrderSelect"
            android:text="@string/ascending"/>

    <Button
            android:id="@+id/sortDescendingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="335dp"
            android:layout_marginEnd="25dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/negative_button_shape"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:fontFamily="@font/redhatdisplay"
            android:onClick="sortOrderSelect"
            android:text="@string/descending"/>

</RelativeLayout>
